--- a/package.json
+++ b/package.json
@@ -14,11 +14,21 @@
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.11.0",
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@pinia/nuxt": "^0.11.2",
     "@types/mongoose": "^5.11.96",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@vueuse/nuxt": "^13.8.0",
     "eslint": "^9.34.0",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
     "nuxt": "^4.0.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@types/swagger-ui-express": "^4.1.8"
   }
 }
