--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
-    "@types/swagger-ui-express": "^4.1.8"
+    "@types/node": "^24.3.1",
+    "@types/swagger-ui-express": "^4.1.8",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
