--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@vueuse/nuxt": "^13.8.0",
     "eslint": "^9.34.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
     "nuxt": "^4.0.3",
