--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/swagger-jsdoc": "^6.0.4",
     "@vueuse/nuxt": "^13.8.0",
+    "bcryptjs": "^3.0.2",
     "eslint": "^9.34.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
