--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/swagger-jsdoc": "^6.0.4",
     "@vueuse/nuxt": "^13.8.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "eslint": "^9.34.0",
     "jsonwebtoken": "^9.0.2",
@@ -33,7 +34,8 @@
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
-    "@types/node": "^24.3.1",
+    "@types/axios": "^0.9.36",
+    "@types/node": "^24.4.0",
     "@types/swagger-ui-express": "^4.1.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
