--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/image": "^1.11.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/swagger-jsdoc": "^6.0.4",
     "@vueuse/nuxt": "^13.8.0",
