--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/image": "^1.11.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.2",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/swagger-jsdoc": "^6.0.4",
@@ -24,6 +25,7 @@
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "eslint": "^9.34.0",
+    "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
