--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
     "@nuxt/image": "^1.11.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.2",
+    "@tiptap/extension-image": "^3.4.4",
+    "@tiptap/extension-link": "^3.4.4",
+    "@tiptap/extension-table": "^3.4.4",
+    "@tiptap/extension-table-cell": "^3.4.4",
+    "@tiptap/extension-table-header": "^3.4.4",
+    "@tiptap/extension-table-row": "^3.4.4",
+    "@tiptap/starter-kit": "^3.4.4",
+    "@tiptap/vue-3": "^3.4.4",
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
@@ -30,13 +38,16 @@
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
     "nuxt": "^4.0.3",
+    "quill": "^2.0.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "vue": "^3.5.20",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-quill": "^0.3.1"
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@tailwindcss/typography": "^0.5.18",
     "@types/axios": "^0.9.36",
     "@types/node": "^24.4.0",
     "@types/swagger-ui-express": "^4.1.8",
